<resources>
    <string name="app_name">JustJavaV2</string>
    <string name="enter_name">Enter your name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="summary">Order Summary</string>
    <string name="submit">Submit Order</string>
    <string name="hi">Hi </string>
    <string name="thanks">Thanks </string>
    <string name="good_day">Have a good day!</string>
    <string name="subject">Order for: </string>
    <string name="your_order">Here\'s your order</string>
    <string name="condiments">Condiments:</string>
</resources>
