<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duffy_w530.justjavav2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:textColor="#0000FF"/>

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/checkBoxWhippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="condimentChecked"
            android:paddingLeft="12dp"
            android:text="@string/whipped_cream"
            android:textColor="#000000"/>

        <CheckBox
            android:id="@+id/checkBoxChocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="condimentChecked"
            android:paddingLeft="12dp"
            android:text="@string/chocolate"
            android:textColor="#A52A2A"/>

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/plusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:text="@string/summary"
            android:textColor="@android:color/black"
            style="@style/HeaderTextStyle"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="$0.00"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/thank_you_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/thanks"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/submit"
            android:textAllCaps="true"/>
    </LinearLayout>
</ScrollView>

